--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="main.css">
-  <title></title>
+  <title>Freedom</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+<div class="wrapper">
+  <h1><q>THE FREEDOM OF MANKIND DOES NOT LIE IN THE FACT THAT WE CAN DO WHAT WE WANT, BUT THAT WE DO NOT HAVE TO DO THAT WHICH WE DO NOT WANT.</q></h1>
+  <p> - Jean-Jacques Rousseau</p>
+  </div>
 </body>
 </html>
