--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
   <link rel="stylesheet" type="text/css" href="main.css">
+  <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&family=Julius+Sans+One&display=swap" rel="stylesheet">
   <title>Freedom</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+  <div class="background">
 <div class="wrapper">
-  <h1><q>THE FREEDOM OF MANKIND DOES NOT LIE IN THE FACT THAT WE CAN DO WHAT WE WANT, BUT THAT WE DO NOT HAVE TO DO THAT WHICH WE DO NOT WANT.</q></h1>
+  <h1><q>"The freedom of mankind does not lie in the fact that we can do what we want, but that we do not have to do that which we do not want. "</q></h1>
   <p> - Jean-Jacques Rousseau</p>
   </div>
+    </div>
 </body>
 </html>
