Language-change buttons added.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
 </head>
 <body>
   <div class="background">
-<div class="wrapper">
-  <h1><q>"The freedom of mankind does not lie in the fact that we can do what we want, but that we do not have to do that which we do not want."</q></h1>
-  <p> - Jean-Jacques Rousseau</p>
-  </div>
+    <div class="wrapper">
+      <h1><q>"The freedom of mankind does not lie in the fact that we can do what we want, but that we do not have to do that which we do not want."</q></h1>
+      <p> - Jean-Jacques Rousseau</p>
     </div>
+  </div>
+    <nav class="button">
+      <a href="#">HU</a>
+      <a href="#">EN</a>
+      <a href="#">DE</a>
+      <a href="#">ES</a>
+    </nav>
 </body>
 </html>
