Alternate pages added.

--- a/indexDE.html
+++ b/indexDE.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="alternate" type="text/html" href="indexHU.html">
-  <link rel="alternate" type="text/html" href="indexEN.html">
+  <link rel="alternate" type="text/html" href="index.html">
   <link rel="alternate" type="text/html" href="indexDE.html">
   <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&family=Julius+Sans+One&display=swap" rel="stylesheet">
   <title>Freedom</title>
@@ -14,13 +14,13 @@
 <body>
   <div class="background">
     <div class="wrapper">
-      <h1><q>"The freedom of mankind does not lie in the fact that we can do what we want, but that we do not have to do that which we do not want."</q></h1>
+      <h1><q>"Die Freiheit des Menschen liegt nicht darin, dass er tun kann, was er will, sondern, dass er nicht tun muss, was er nicht will."</q></h1>
       <p> - Jean-Jacques Rousseau</p>
     </div>
   </div>
     <nav class="button">
       <a href="indexHU.html">HU</a>
-      <a href="indexEN.html">EN</a>
+      <a href="index.html">EN</a>
       <a href="indexDE.html">DE</a>
     </nav>
 </body>
