--- a/indexEN.html
+++ b/indexEN.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="alternate" type="text/html" href="indexHU.html">
-  <link rel="alternate" type="text/html" href="indexEN.html">
+  <link rel="alternate" type="text/html" href="index.html">
   <link rel="alternate" type="text/html" href="indexDE.html">
   <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&family=Julius+Sans+One&display=swap" rel="stylesheet">
   <title>Freedom</title>
@@ -20,7 +20,7 @@
   </div>
     <nav class="button">
       <a href="indexHU.html">HU</a>
-      <a href="indexEN.html">EN</a>
+      <a href="index.html">EN</a>
       <a href="indexDE.html">DE</a>
     </nav>
 </body>
